Changelog
=========


2.3.6 (unreleased)
------------------

- Make Portlet work with Users that don't Userid as Loginname.
  [tschanzt]


2.3.5 (2012-06-20)
------------------

- Add task view tests.
  [jone]

- Fix template when task has no workflow.
  [jone]

- Testing: use p.a.testing instead of PloneTestCase.
  [jone]


2.3.4 (2012-06-13)
------------------

- Fixed translations.
  [Julian Infanger]


2.3.3 (2012-03-19)
------------------

- Fix manifest.in
  [mathias.leimgruber]


2.3.2 (2012-03-19)
------------------

- Add tasks listing for ftw.workspace details PDF.
  [jone]


2.3.1 (2012-03-05)
------------------

- Use th instead of td.table_label for heading in vertical listing table.
  [Julian Infanger]

- Use plone default classes for table.
  [Julian Infanger]


2.3 (2011-09-08)
----------------

- Added plone.po file
  [ttschanz]


2.2 (2010-12-22)
----------------

- Fixed name of index used to determine users tasks
  [lgraf]


2.1 (2010-11-18)
----------------

- Fix in getUserInfo.
  [Julian Infanger]

- Cleanup Task content type module, removed AnnotationStorage from some fields
  [jone]

- Fixed catalog stuff, renamed 'responsibility' index to 'getResponsibility'
  [jone]

- rebuild Translations

- renamed from izug.task to ftw.task, made changes for plone4 support


1.0c3 (2010-10-26)
------------------

- Fixed import error in setup.py
  [jone]


1.0c2 (1010-06-18)
------------------

- Use docs/HISTORY.txt / remove CONTRIBUTORS.txt
  [jone]